Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/preview/classReaderTest/Client.preview.out
- compiler.warn.preview.feature.use.classfile: Bar.class, 18
- compiler.err.warnings.and.werror
1 error
1 warning
